--- a/spa-webapp/src/assets/appConfig.json.sample
+++ b/spa-webapp/src/assets/appConfig.json.sample
@@ -1,15 +1,9 @@
 {
-  "stsServer": "https://login.microsoftonline.com/<REPLACEME>/v2.0",
-  "redirect_url": "https://localhost:4200",
-  "client_id": "<REPLACEME>",
-  "response_type": "id_token token",
-  "scope": "openid profile",
-  "post_logout_redirect_uri": "https://localhost:4200",
-  "start_checksession": true,
-  "silent_renew": true,
-  "silent_renew_url": "https://localhost:4200/silent-renew.html",
-  "post_login_route": "/home",
-  "forbidden_route": "/forbidden",
-  "unauthorized_route": "/unauthorized",
-  "max_id_token_iat_offset_allowed_in_seconds": 3000
+  "apiEndpoint": "https://REPLACE.run.app/data",
+  "auth": {
+    "issuer": "https://login.microsoftonline.com/TENANT_ID/v2.0",
+    "redirectUri": "http://localhost:4200",
+    "clientId": "CLIENT_APP_ID",
+    "scope": "api://API/SCOPE api://API/user_impersonation openid profile offline_access "
+  }
 }
